--- a/_posts/2020-12-26-lookback_2020.md
+++ b/_posts/2020-12-26-lookback_2020.md
@@ -108,7 +108,7 @@ toc_sticky: true
 
 ## 12월
 
-코로나 확진자가 어마무시하게 늘어나고 있다. 하루에 100명만 되어도 와.. 진짜 전염성이 심하구나 생각했었는데, 지금은 하루에 1,000명 이상의 확진자가 발생하고 있다. 코로나로 인해서 아직 한 달도 안 다닌 회사를 재택근무로 근무하고 있다. 어색 어색. 시계열 분석에 대한 지식이 전무해서 지금은 시계열 분석과 RNN을 공부하고 있다. 올해 크리스마스는 뉴욕에서 보내고 싶었는데ㅎㅎ 뉴욕은 무슨 성수동에 콕 박혀있다. 
+코로나 확진자가 어마무시하게 늘어나고 있다. 하루에 100명만 되어도 와.. 진짜 전염성이 심하구나 생각했었는데, 지금은 하루에 1,000명 이상의 확진자가 발생하고 있다. 코로나로 인해서 아직 한 달도 안 다닌 회사를 재택근무로 근무하고 있다. 어색 어색. 시계열 분석에 대한 지식이 전무해서 지금은 시계열 분석과 RNN을 공부하고 있다.
 
 ---
 
